fixed bottom bar on mobile

--- a/Latitude/LatVSCloud/style.css
+++ b/Latitude/LatVSCloud/style.css
@@ -1,27 +1,25 @@
 #mainBox{
-
     background-color: white;
+    padding-bottom:30px;
 }
 
 #visBox{
-
     background-color:white;
+    padding-bottom:100px;
 }
 
 #copyright{
-    padding-top:20px;
+    padding-top:13px;
     text-align:center;
     vertical-align:middle;
 }
 
 .footer{
     position:fixed;
-    left:0;
     bottom:0;
-    height:80px;
+    height:50px;
     width:100%;
     background-color:rgb(170, 169, 169);
     color:white;
     text-align:center;
 }
-
